--- a/blogsymfony/.env
+++ b/blogsymfony/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=291fe4c6c5f91132d315e254efc5014c
+APP_SECRET=dbb06f273f3da3274ede93aa32c7162a
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
@@ -27,6 +27,6 @@ APP_SECRET=291fe4c6c5f91132d315e254efc5014c
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root@127.0.0.1:3306/clasicos?serverVersion=5.7"
+# DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
